tested on different screen sizes to locate any potential sizing or alignment issues, fixed all.

--- a/styles/CTA.module.css
+++ b/styles/CTA.module.css
@@ -1,10 +1,22 @@
 .flex {
     display: flex;
+    width: 100%;
+    max-width: 1224px;
     align-items: center;
     justify-content: space-between;
 }
 
+.container {
+    max-width: 1224px;
+    width: 100%;
+    margin: 0 89px;
+    display: flex;
+    justify-content: space-between;
+  }
+
 .CTA {
+    display: flex;
+    justify-content: center;
     background-color: #F9FAFD;
     padding: 77px 88px;
     width: 100%;
