--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -63,7 +63,7 @@
   height: 634px;
   width: 100%;
   overflow: hidden;
-  justify-content: left;
+  justify-content: center;
   align-items: center;
   padding-left: 89px;
   padding-right: 89px;
